--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
     "@pusher/chatkit": "^0.7.17",
     "cors": "^2.8.4",
     "express": "^4.16.3",
