--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": {
+    "/create/user": {
+      "target": "http://localhost:3001"
+    }
+  }
 }
