--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": {
+    "/create/user": {
+      "target": "http://localhost:3001"
+    }
   }
 }
