--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:8.4.0
+      - image: circleci/node:7.10
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -35,7 +35,12 @@ jobs:
         
       # run tests!
       - run: npm test
+     # - run:
+     #     name: Deploy Master to Heroku
+     #     command: |
+     #       git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git
 
+# deployment configuration
   deploy:
     machine:
         enabled: true
@@ -48,7 +53,6 @@ jobs:
           name: Deploy Master to Heroku
           command: |
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
-
 workflows:
   version: 2
   build-and-deploy:
