--- a/package.json
+++ b/package.json
@@ -27,9 +27,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": {
-    "/create/user": {
-      "target": "http://localhost:3001"
-    }
-  }
+  "proxy": "http://localhost:3001"
 }
