--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     
   },
   "scripts": {
-    "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
+    "start": "concurrently \"node ./server.js\" \"react-scripts start -p 3001\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
