--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "slack-app-clone",
-  "version": "1.0.0",
+  "name": "react-chat-tutorial",
+  "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-  },
   "dependencies": {
-    "react-scripts": "0.9.5",
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
-    "@pusher/chatkit": "^0.7.11",
-    "@pusher/chatkit-server": "^0.12.1",
-    "auth0-js": "^9.0.0",
+    "@pusher/chatkit": "^0.7.17",
     "axios": "^0.18.0",
-    "bootstrap": "^3.3.7",
-    "chai": "^4.1.2",
-    "concurrently": "^4.0.1",
     "cors": "^2.8.4",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
     "express": "^4.16.3",
-    "history": "^4.6.1",
-    "json-server": "^0.14.0",
-    "mocha": "^5.2.0",
-    "react": "^16.4.2",
-    "react-bootstrap": "^0.32.3",
-    "react-dom": "^16.4.2",
+    "pusher-chatkit-server": "^0.12.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "0.9.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
+    "concurrently": "^3.5.1",
     "typeface-roboto": "^0.0.54"
+  },
+  "devDependencies": {
+    
   },
   "scripts": {
     "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
