--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.1",
+    "react-scripts": "0.9.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "concurrently": "^3.5.1",
-    "typeface-roboto": "^0.0.54"
+    "concurrently": "^3.5.1"
   },
   "devDependencies": {
     
