--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.5",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "concurrently": "^3.5.1"
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    
+    "chai": "^4.1.2",
+    "concurrently": "^3.5.1",
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "mocha src/**/*.test.js",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
