--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0"
   },
