--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-test-utils": "^0.2.2"
   },
   "scripts": {
     "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
     "build": "react-scripts build",
-    "test": "mocha src/**/*.test.js",
+    "test33": "mocha src/**/*.test.js",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
