--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "jest-cli": "^23.6.0",
     "mocha": "^5.2.0",
     "redux-mock-store": "^1.5.3"
   },
