--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-chat-tutorial",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "6.11.1"
+  },
   "dependencies": {
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
