--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.15",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "concurrently": "^3.5.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "concurrently": "^3.5.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.5.0",
